fix HTML comments in pre tags

--- a/tests/html_tags/pre.html
+++ b/tests/html_tags/pre.html
@@ -78,3 +78,12 @@ ___________________________
 <pre></pre>
 
 <pre><code #foo></code></pre>
+
+<details>
+  <pre><!--Comments-->
+  </pre></details>
+
+<details><pre>
+  <!--Comments-->
+</pre>
+</details>
