--- a/tests/html_basics/with-colon.html
+++ b/tests/html_basics/with-colon.html
@@ -1,10 +1,16 @@
 <foo:bar>
-  <div> block block block </div><div> block block block </div><div> block block block </div><pre> pre  pre  pre </pre><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><html:button> known inline</html:button></foo:bar>
+  <div> block block block </div><div> block block block </div><div> block block block </div><pre> pre  pre  pr
+  e 
+        </pre><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><html:button> known inline</html:button></foo:bar>
 <foo:div>
-  <div> block block block </div><div> block block block </div><div> block block block </div><pre> pre  pre  pre </pre><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><html:button> known inline</html:button></foo:div>
+  <div> block block block </div><div> block block block </div><div> block block block </div><pre> pre  pre  pr
+  e 
+        </pre><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><html:button> known inline</html:button></foo:div>
 <foo:span>
-    <div> block block block </div><div> block block block </div><div> block block block </div><pre> pre  pre  pre </pre><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><html:button> known inline</html:button></foo:span>
-  
+  <div> block block block </div><div> block block block </div><div> block block block </div><pre> pre  pre  pr
+  e 
+        </pre><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><html:button> known inline</html:button></foo:span>
+
 <!-- #7236 -->
 <with:colon>
   <div><h1> text  text  text  text  text  text  text  text  text  text  text  text  text  text </h1></div>
