Add dash element

--- a/tests/html_basics/with-colon.html
+++ b/tests/html_basics/with-colon.html
@@ -10,6 +10,10 @@
   <div> block block block </div><div> block block block </div><div> block block block </div><pre> pre  pre  pr
   e 
         </pre><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><html:button> known inline</html:button></foo:span>
+<foo-span>
+  <div> block block block </div><div> block block block </div><div> block block block </div><pre> pre  pre  pr
+  e 
+        </pre><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><span> inline inline  </span><html:button> known inline</html:button></foo-span>
 
 <!-- #7236 -->
 <with:colon>
