--- a/tests/html_basics/with-colon.html
+++ b/tests/html_basics/with-colon.html
@@ -2,7 +2,7 @@
 <div>
 <foo:bar>
 <div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </div>
-<div> block </div><div> block </div> <div> block </div><div> block </div><div> block </div>
+<div> block </div><DIV> BLOCK </DIV> <div> block </div><div> block </div><div> block </div>
 <pre> pre pr
 e</pre>
 <textarea> pre-wrap pr
@@ -10,7 +10,7 @@ e-wrap </textarea>
 <span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </span>
 <span> inline </span><span> inline </span> <span> inline </span><span> inline </span>
 <html:div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </html:div>
-<html:div> block </html:div><html:div> block </html:div> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
+<html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
 <html:pre> pre pr
 e</html:pre>
 <html:textarea> pre-wrap pr
@@ -23,7 +23,7 @@ e-wrap </html:textarea>
 <div>
 <foo:div>
 <div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </div>
-<div> block </div><div> block </div> <div> block </div><div> block </div><div> block </div>
+<div> block </div><DIV> BLOCK </DIV> <div> block </div><div> block </div><div> block </div>
 <pre> pre pr
 e</pre>
 <textarea> pre-wrap pr
@@ -31,7 +31,7 @@ e-wrap </textarea>
 <span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </span>
 <span> inline </span><span> inline </span> <span> inline </span><span> inline </span>
 <html:div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </html:div>
-<html:div> block </html:div><html:div> block </html:div> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
+<html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
 <html:pre> pre pr
 e</html:pre>
 <html:textarea> pre-wrap pr
@@ -44,7 +44,7 @@ e-wrap </html:textarea>
 <div>
 <foo:span>
 <div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </div>
-<div> block </div><div> block </div> <div> block </div><div> block </div><div> block </div>
+<div> block </div><DIV> BLOCK </DIV> <div> block </div><div> block </div><div> block </div>
 <pre> pre pr
 e</pre>
 <textarea> pre-wrap pr
@@ -52,7 +52,7 @@ e-wrap </textarea>
 <span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </span>
 <span> inline </span><span> inline </span> <span> inline </span><span> inline </span>
 <html:div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </html:div>
-<html:div> block </html:div><html:div> block </html:div> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
+<html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
 <html:pre> pre pr
 e</html:pre>
 <html:textarea> pre-wrap pr
@@ -65,7 +65,7 @@ e-wrap </html:textarea>
 <div>
 <foo-bar>
 <div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </div>
-<div> block </div><div> block </div> <div> block </div><div> block </div><div> block </div>
+<div> block </div><DIV> BLOCK </DIV> <div> block </div><div> block </div><div> block </div>
 <pre> pre pr
 e</pre>
 <textarea> pre-wrap pr
@@ -73,7 +73,7 @@ e-wrap </textarea>
 <span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </span>
 <span> inline </span><span> inline </span> <span> inline </span><span> inline </span>
 <html:div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </html:div>
-<html:div> block </html:div><html:div> block </html:div> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
+<html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
 <html:pre> pre pr
 e</html:pre>
 <html:textarea> pre-wrap pr
@@ -86,7 +86,7 @@ e-wrap </html:textarea>
 <div>
 <div>
 <div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </div>
-<div> block </div><div> block </div> <div> block </div><div> block </div><div> block </div>
+<div> block </div><DIV> BLOCK </DIV> <div> block </div><div> block </div><div> block </div>
 <pre> pre pr
 e</pre>
 <textarea> pre-wrap pr
@@ -94,7 +94,7 @@ e-wrap </textarea>
 <span> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog inline </span>
 <span> inline </span><span> inline </span> <span> inline </span><span> inline </span>
 <html:div> looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog block </html:div>
-<html:div> block </html:div><html:div> block </html:div> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
+<html:DIV> block </html:DIV><HTML:DIV> BLOCK </HTML:DIV> <html:div> block </html:div><html:div> block </html:div><html:div> block </html:div>
 <html:pre> pre pr
 e</html:pre>
 <html:textarea> pre-wrap pr
