--- a/tests/html_tags/tags.html
+++ b/tests/html_tags/tags.html
@@ -99,7 +99,7 @@
 <router-outlet></router-outlet>
 <app-footer [input]="something"></app-footer>
 </div>
-<x:root><SPAN>foreign tag name should not be lower cased</SPAN></x:root>
+<x:root><SPAN>tag name in other namespace should also lower cased</SPAN></x:root>
 <div>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit,
   "<strong>seddoeiusmod</strong>".
