Add the CHANGELOG test

--- a/tests/handlebars-venerable/template.html
+++ b/tests/handlebars-venerable/template.html
@@ -3,3 +3,5 @@
 <h1>{{title}}</h1>
 <div class="body">{{body}}</div></div>
 </script>
+
+<script type="text/x-handlebars-template">{{component 'hey'}}</script>
