--- a/tests/html_tags/tags.html
+++ b/tests/html_tags/tags.html
@@ -113,3 +113,8 @@
   <i class="fa fa-refresh fa-spin" />
   <i class="fa fa-refresh fa-spin" />
 </span>
+
+<!-- self-closing -->
+<span><input type="checkbox"/> </span>
+<span><span><input type="checkbox"/></span></span>
+<span><input type="checkbox"/></span>
