--- a/tests/html_tags/tags.html
+++ b/tests/html_tags/tags.html
@@ -113,3 +113,8 @@
   <i class="fa fa-refresh fa-spin" />
   <i class="fa fa-refresh fa-spin" />
 </span>
+
+<!-- #5810 -->
+<table><tr>
+</tr>
+</table><div>Should not insert empty line before this div</div>
