--- a/tests/html_attributes/style.html
+++ b/tests/html_attributes/style.html
@@ -29,3 +29,6 @@ background: linear-gradient(to left, hotpink, hsla(240, 100%, 50%, .05), transpa
 style="css-prop-1: css-value;css-prop-2: css-value;css-prop-3: css-value;css-prop-4: css-value;"
  attribute-1 attribute-2 attribute-3 attribute-4 attribute-5 attribute-6 attribute-7 >
   </div>
+
+<div style="{{ ...styles }}" 
+></div>
