--- a/tests/html_attributes/style.html
+++ b/tests/html_attributes/style.html
@@ -35,3 +35,6 @@ style="css-prop-1: css-value;css-prop-2: css-value;css-prop-3: css-value;css-pro
 
 <div style="{{ ...styles }}" 
 ></div>
+
+<div style="color: red; {{ otherStyles }}"
+></div>
