--- a/tests/html_attributes/style.html
+++ b/tests/html_attributes/style.html
@@ -28,6 +28,12 @@ background: linear-gradient(to left, hotpink, hsla(240, 100%, 50%, .05), transpa
             display    :inline ">
   </div>
 
+
+<div style="   color : red;
+
+            display    :inline ">
+  </div>
+
 <div attribute-1 attribute-2 attribute-3 attribute-4 attribute-5 attribute-6 attribute-7 
 style="css-prop-1: css-value;css-prop-2: css-value;css-prop-3: css-value;css-prop-4: css-value;"
  attribute-1 attribute-2 attribute-3 attribute-4 attribute-5 attribute-6 attribute-7 >
