--- a/tests/html_attributes/style.html
+++ b/tests/html_attributes/style.html
@@ -1,12 +1,15 @@
 <div style="
+
 color:
 #fFf
+
 "></div>
 
 <div style=" "></div>
 <div style></div>
 
 <div style="
+
 all: initial;display: block;
 contain: content;text-align: center;
 
@@ -16,6 +19,7 @@ background: linear-gradient(to left, hotpink, #FFF00F, #ccc, hsla(240, 100%, 50%
 background: linear-gradient(to left, hsla(240, 100%, 50%, .05), red);
 max-width: 500px;margin: 0 auto;
 border-radius: 8px;transition: transform .2s ease-out;
+
 "></div>
 
 
@@ -29,9 +33,13 @@ background: linear-gradient(to left, hotpink, hsla(240, 100%, 50%, .05), transpa
   </div>
 
 
-<div style="   color : red;
+<div style="  
 
-            display    :inline ">
+color: green;
+
+display: inline 
+
+">
   </div>
 
 <div attribute-1 attribute-2 attribute-3 attribute-4 attribute-5 attribute-6 attribute-7 
