--- a/tests/html_attributes/class-names.html
+++ b/tests/html_attributes/class-names.html
@@ -25,6 +25,10 @@ foo bar
                      foo bar
 ">
 
+<img
+class="{{ ...classes }}">
+<img
+class="foo bar {{ otherClass }}">
 
 <!-- escaped -->
 <!-- from: https://developer.mozilla.org/en-US/docs/Web/API/CSS/escape#Basic_results -->
@@ -37,12 +41,12 @@ foo bar
 ">
 
 <!-- from yahoo website -->
-<div id="header-wrapper" class="Bgc(#fff) Bdbc(t) Bdbs(s) Bdbw(1px) D(tb) Pos(f) Tbl(f) W(100%) Z(4) 
-has-scrolled_Bdc($c-fuji-grey-d) Scrolling_Bdc($c-fuji-grey-d) has-scrolled_Bxsh($headerShadow) 
+<div id="header-wrapper" class="Bgc(#fff) Bdbc(t) Bdbs(s) Bdbw(1px) D(tb) Pos(f) Tbl(f) W(100%) Z(4)
+has-scrolled_Bdc($c-fuji-grey-d) Scrolling_Bdc($c-fuji-grey-d) has-scrolled_Bxsh($headerShadow)
 Scrolling_Bxsh($headerShadow) ">
 <div class="Bgc(#fff) M(a) Maw(1301px) Miw(1000px) Pb(12px) Pt(22px) Pos(r) TranslateZ(0) Z(6)"
-><h1 class="Fz(0) Pstart(15px) Pos(a)"><a id="header-logo" 
+><h1 class="Fz(0) Pstart(15px) Pos(a)"><a id="header-logo"
 href="https://www.yahoo.com/" class="D(b) Pos(r)" data-ylk="elm:img;elmt:logo;sec:hd;slk:logo">
-<img class="H(27px)!--sm1024 Mt(9px)!--sm1024 W(90px)!--sm1024" 
-src="https://s.yimg.com/rz/p/yahoo_frontpage_en-US_s_f_p_205x58_frontpage_2x.png" height="58px" 
+<img class="H(27px)!--sm1024 Mt(9px)!--sm1024 W(90px)!--sm1024"
+src="https://s.yimg.com/rz/p/yahoo_frontpage_en-US_s_f_p_205x58_frontpage_2x.png" height="58px"
 width="205px" alt="Yahoo"/></a></h1></div></div>
