--- a/tests/format/html/single-quote-option/attributes.html
+++ b/tests/format/html/single-quote-option/attributes.html
@@ -4,3 +4,7 @@
 <div title="My 'title"></div>
 <div title='My "title"'></div>
 <div title="My 'title'"></div>
+<div title='My\" title'></div>
+<div title="My\&quot; title"></div>
+<div title="My\' title"></div>
+<div title="My\&apos; title"></div>
