Add the links back.

--- a/website/pages/playground/index.html
+++ b/website/pages/playground/index.html
@@ -23,6 +23,9 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
+    <link rel="icon" href="/icon.png" />
+    <link rel="apple-touch-icon" href="/icon.png" />
+
     <link
       rel="stylesheet"
       crossorigin
