--- a/website/index.html
+++ b/website/index.html
@@ -171,7 +171,7 @@
     <link rel="stylesheet" href="./playground/playground.css" />
 
     <!-- Google tag (gtag.js) -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-T57CP1SG02"
     ></script>
@@ -182,7 +182,7 @@
       }
       gtag("js", new Date());
       gtag("config", "G-T57CP1SG02");
-    </script>
+    </script> -->
   </head>
 
   <body>
@@ -208,12 +208,12 @@
 
     <script type="module" src="./playground/index.jsx"></script>
 
-    <script
+    <!-- <script
       async
       defer
       src="https://buttons.github.io/buttons.js"
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    ></script>
+    ></script> -->
   </body>
 </html>
