--- a/website/index.html
+++ b/website/index.html
@@ -171,7 +171,7 @@
     <link rel="stylesheet" href="./playground/playground.css" />
 
     <!-- Google tag (gtag.js) -->
-    <!-- <script
+    <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-T57CP1SG02"
     ></script>
@@ -182,7 +182,7 @@
       }
       gtag("js", new Date());
       gtag("config", "G-T57CP1SG02");
-    </script> -->
+    </script>
   </head>
 
   <body>
