--- a/tests/format/html/iframe/example.html
+++ b/tests/format/html/iframe/example.html
@@ -27,6 +27,9 @@
   <!-- Single long permission -->
   <iframe allow="camera https://subdomain1.example.com https://subdomain2.example.com https://subdomain3.example.com https://subdomain4.example.com https://subdomain5.example.com"></iframe>
 
+  <!-- Duplicate permissions -->
+  <iframe allow="camera 'none'; camera 'self'"></iframe>
+
   <!-- Empty and whitespace -->
   <iframe allow="   "></iframe>
 </body>
