use babel to parse

--- a/tests/format/html/attributes/event-attributes.html
+++ b/tests/format/html/attributes/event-attributes.html
@@ -14,3 +14,7 @@
 <select onchange="filterResults(  this.value,  this.selectedIndex  )">
   <option>Option 1</option>
 </select>
+
+<button onclick="
+   alert(1);           alert(2);
+ ">Click</button>
