Add handler execute scope related test

--- a/tests/format/html/attributes/event-attributes.html
+++ b/tests/format/html/attributes/event-attributes.html
@@ -18,3 +18,15 @@
 <button onclick="
    alert(1);           alert(2);
  ">Click</button>
+
+<button onclick="
+    return false
+  ">Click</button>
+
+<button onclick="
+  console.log(arguments)
+  ">Click</button>
+
+<button onclick="
+  console.log(onclick)
+  ">Click</button>
