--- a/tests/format/html/attributes/event-attributes.html
+++ b/tests/format/html/attributes/event-attributes.html
@@ -30,3 +30,8 @@
 <button onclick="
   console.log(onclick)
   ">Click</button>
+
+<button onclick="
+  'use strict'
+  console.log(onclick)
+  ">Click</button>
