--- a/tests/format/html/iframe/example.html
+++ b/tests/format/html/iframe/example.html
@@ -25,7 +25,7 @@
   <iframe allow="   "></iframe>
 
   <iframe allow="
-    camera   'self'  ;   microphone   'self'
+    中文-camera   'self'  ;   中文-microphone   'self'
   "></iframe>
 </body>
 </html>
