Add test for non-iframe element

--- a/tests/format/html/attributes/iframe-allow-attribute/allow-attribute.html
+++ b/tests/format/html/attributes/iframe-allow-attribute/allow-attribute.html
@@ -24,3 +24,6 @@ ambient-light-sensor 'self'"></iframe>
 <!-- None ASCII -->
 <iframe allow="   中文-camera"></iframe>
 <iframe allow=" 中文-camera   'self'  ;   microphone   '中文-origin'"></iframe>
+
+<!-- Not iframe-->
+<a allow="   camera 'self'; ambient-light-sensor 'self'"></a>
