Fix: Missing element tag check

--- a/tests/format/html/attributes/iframe-allow-attribute/allow-attribute.html
+++ b/tests/format/html/attributes/iframe-allow-attribute/allow-attribute.html
@@ -26,4 +26,7 @@ ambient-light-sensor 'self'"></iframe>
 <iframe allow=" 中文-camera   'self'  ;   microphone   '中文-origin'"></iframe>
 
 <!-- Not iframe-->
-<a allow="   camera 'self'; ambient-light-sensor 'self'"></a>
+<a allow="
+        camera 'self';
+ambient-light-sensor 'self'
+"></a>
