--- a/tests/format/lwc/lwc/attributes.html
+++ b/tests/format/lwc/lwc/attributes.html
@@ -10,4 +10,5 @@
 <template if:true={value.error}>
     <c-error-panel errors={value.error}></c-error-panel>
 </template>
+<div foo="{data}" bar='{data}' baz={data}>
 <a href="#" onclick={aFunction}>
