Use same fixture

--- a/tests/format/angular/attribute-value-hugging/attribute-value-hugging.html
+++ b/tests/format/angular/attribute-value-hugging/attribute-value-hugging.html
@@ -1,15 +1,23 @@
 <!-- #17729 -->
 <div
-  [target]="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string'"
-  [target]="'first loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string' + 'second loooooong string'"
-  [target]="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} ${literal}`"
-  [target]="`first loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} ${literal}` + `second loooooong ${template} ${literal}`"
-  [target]="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template}
-${literal}`"
-  *directive="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string'"
-  *directive="'first loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string' + 'second loooooong string'"
-  *directive="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} ${literal}`"
-  *directive="`first loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} ${literal}` + `second loooooong ${template} ${literal}`"
-  *directive="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template}
-${literal}`"
-></div>
+[foo]="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${foo} template literal value`"
+[foo1]="`${first} loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} ${literal}`
++`${second} loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} ${literal}`"
+[foo2]="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${foo +               bar} template literal value`"
+[string]="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog literal string value'"
+[add]="'first loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog' + 'second loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog'"
+[number]="100000000000000000000000000000000000000000000000000000000000000000000000000">
+[shortTemplate]="`1
+2`"
+</div>
+<div
+*foo="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${foo} template literal value`"
+*foo1="`${first} loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} ${literal}`
++`${second} loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} ${literal}`"
+*foo2="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${foo +               bar} template literal value`"
+*string="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog literal string value'"
+*add="'first loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog' + 'second loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog'"
+*number="100000000000000000000000000000000000000000000000000000000000000000000000000">
+*shortTemplate="`1
+2`"
+</div>
