--- a/tests/format/angular/attribute-value-hugging/attribute-value-hugging.html
+++ b/tests/format/angular/attribute-value-hugging/attribute-value-hugging.html
@@ -8,8 +8,7 @@
 [add]="'first loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog' + 'second loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog'"
 [number]="100000000000000000000000000000000000000000000000000000000000000000000000000">
 [shortTemplate]="`1
-2`"
-</div>
+2`"></div>
 <div
 *foo="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${foo} template literal value`"
 *foo1="`${first} loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} ${literal}`
@@ -19,5 +18,4 @@
 *add="'first loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog' + 'second loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog'"
 *number="100000000000000000000000000000000000000000000000000000000000000000000000000">
 *shortTemplate="`1
-2`"
-</div>
+2`"></div>
