--- a/tests/format/angular/attribute-value-hugging/attribute-value-hugging.html
+++ b/tests/format/angular/attribute-value-hugging/attribute-value-hugging.html
@@ -6,7 +6,7 @@
 [foo2]="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${foo +               bar} template literal value`"
 [string]="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog literal string value'"
 [add]="'first loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog' + 'second loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog'"
-[number]="100000000000000000000000000000000000000000000000000000000000000000000000000">
+[number]="100000000000000000000000000000000000000000000000000000000000000000000000000"
 [shortTemplate]="`1
 2`"></div>
 <div
@@ -16,6 +16,6 @@
 *foo2="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${foo +               bar} template literal value`"
 *string="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog literal string value'"
 *add="'first loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog' + 'second loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog'"
-*number="100000000000000000000000000000000000000000000000000000000000000000000000000">
+*number="100000000000000000000000000000000000000000000000000000000000000000000000000"
 *shortTemplate="`1
 2`"></div>
