--- a/tests/format/lwc/attribute/quotes/quotes.html
+++ b/tests/format/lwc/attribute/quotes/quotes.html
@@ -3,3 +3,12 @@ unquoted={data}>   </div>
 
 <div class="{data}"    class='{data}'
 class={data}>   </div>
+
+<div
+  single-quote="'"
+  single-quote-escaped-in-single-quote='&apos;'
+  single-quote-escaped-in-double-quote="&apos;"
+  double-quote='"'
+  double-quote-escaped-in-single-quote='&quot;'
+  double-quote-escaped-in-double-quote="&quot;"
+></div>
