--- a/tests/format/lwc/attribute/quotes/quotes.html
+++ b/tests/format/lwc/attribute/quotes/quotes.html
@@ -6,9 +6,12 @@ class={data}>   </div>
 
 <div
   single-quote="'"
+  single-quote-escaped-unquoted=&apos;
   single-quote-escaped-in-single-quote='&apos;'
   single-quote-escaped-in-double-quote="&apos;"
   double-quote='"'
+  double-quote-escaped-unquoted=&quot;
   double-quote-escaped-in-single-quote='&quot;'
   double-quote-escaped-in-double-quote="&quot;"
+  style="width:                         100px;"
 ></div>
