--- a/tests/format/lwc/attribute/quotes/quotes.html
+++ b/tests/format/lwc/attribute/quotes/quotes.html
@@ -5,13 +5,10 @@ unquoted={data}>   </div>
 class={data}>   </div>
 
 <div
-  single-quote="'"
-  single-quote-escaped-unquoted=&apos;
-  single-quote-escaped-in-single-quote='&apos;'
-  single-quote-escaped-in-double-quote="&apos;"
-  double-quote='"'
-  double-quote-escaped-unquoted=&quot;
-  double-quote-escaped-in-single-quote='&quot;'
-  double-quote-escaped-in-double-quote="&quot;"
+  in-single-quote="'&apos;&quot;"
+  in-double-quote='"&apos;&quot;'
+  escaped-unquoted=&apos;&quot;
+  escaped-in-single-quote='&apos;&quot;'
+  escaped-in-double-quote="&apos;&quot;"
   style="width:                         100px;"
 ></div>
