--- a/tests/format/lwc/attribute/quotes/quotes.html
+++ b/tests/format/lwc/attribute/quotes/quotes.html
@@ -3,3 +3,12 @@ unquoted={data}>   </div>
 
 <div class="{data}"    class='{data}'
 class={data}>   </div>
+
+<div
+  in-single-quote="'&apos;&quot;"
+  in-double-quote='"&apos;&quot;'
+  escaped-unquoted=&apos;&quot;
+  escaped-in-single-quote='&apos;&quot;'
+  escaped-in-double-quote="&apos;&quot;"
+  style="width:                         100px;"
+></div>
