--- a/tests/format/html/yaml/invalid.html
+++ b/tests/format/html/yaml/invalid.html
@@ -1,6 +1,8 @@
 ---
-key:     value
-key:value
+[
+    ! should NOT format !
+because: 
+this is INVALID yaml
 ---
 
 <html><head></head><body></body></html>
