--- a/website/index.html
+++ b/website/index.html
@@ -176,7 +176,7 @@
       }
       gtag("js", new Date());
       gtag("config", "G-T57CP1SG02");
-    ></script>
+    </script>
   </head>
 
   <body>
