--- a/website/index.html
+++ b/website/index.html
@@ -157,8 +157,8 @@
       referrerpolicy="no-referrer"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/vue@3.5.13/dist/vue.global.prod.js"
-      integrity="sha512-lPRA3OIzw5F3+wTas6YPRiW/1D6VH/HcxLhoO7vEhOelOd6IAq7rtu5HALQkD5NW9v5aY9RL0CW4eQM5CKdx3Q=="
+      src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.5.22/vue.global.prod.min.js"
+      integrity="sha512-Y9sKU0AwzWRxKSLd2i35LuDpUdHY/E9tJrKG0mxw0qYQ75VVgGYazIUQPwKhFK9vGO3jIgAtxLiSq8GQ7PDfUg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
