--- a/website/index.html
+++ b/website/index.html
@@ -56,6 +56,6 @@
 
   <body>
     <div id="root" class="playground"></div>
-    <script type="module" src="./playground/index.jsx"></script>
+    <script type="module" src="./playground/main.js"></script>
   </body>
 </html>
