--- a/tests/config/browser/index.html
+++ b/tests/config/browser/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div>Use <code>__prettier</code> to debug in console.</div>
     <script type="module" src="main.js"></script>
   </body>
 </html>
