--- a/tests/config/browser/index.html
+++ b/tests/config/browser/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <div>Use <code>__prettier</code> to debug in console.</div>
+    <div>
+      Use <code>__prettier_esm</code> or <code>__prettier_umd</code> to debug in
+      console.
+    </div>
     <script type="module" src="main.js"></script>
   </body>
 </html>
